--- a/SelF/templates/registration/login.html
+++ b/SelF/templates/registration/login.html
@@ -8,5 +8,6 @@
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Login</button>
+    New to the app? <a href="{% url 'signup' %}">Sign up here</a>
   </form>
 {% endblock %}
