--- a/SelF/templates/registration/signup.html
+++ b/SelF/templates/registration/signup.html
@@ -1,11 +1,84 @@
-{% extends "base.html" %}
 
-{% block title %}Create an Account{% endblock %}
+<!-- 
+    <form method="POST" class="form-group">
+	
+	<button type="submit">SIGN UP</button>
+    </form> -->
+
 
 {% block content %}
-    <form method="POST" class="form-group">
-	{% csrf_token %}
-	{{ form }}
-	<button type="submit">SIGN UP</button>
-    </form>
+<style>
+    body{
+        background-image: linear-gradient(to right, turquoise , midnightblue);
+        color: white;
+        text-align:center
+    }
+    a:hover {
+        text-decoration: none;
+        background-color: rgba(255,255,255,0.5);
+        color: peru;
+    }
+    a{
+        color: white;
+    }
+    h1 {
+        padding: 40px;
+    }
+    input {
+        margin: 5px;
+    }
+    button {
+        margin: 10px;
+        margin-bottom: 20px;
+    }
+</style> 
+
+<h1>Signup</h1>
+<form method="POST" action="{% url 'login' %}">
+    {% csrf_token %}
+    <div>
+        <label for="user_name">UserName:</label>
+        <input name="user_name" type="text" id="user_name" maxlength="50" required>
+    </div>
+	<div>
+        <label for="first_name">First Name:</label>
+        <input name="first_name" type="text" id="first_name" maxlength="50" required>
+    </div>
+	<div>
+        <label for="last_name">Last Name:</label>
+        <input name="last_name" type="text" id="last_name" maxlength="50" required>
+    </div>
+    <div>
+        <label for="bio">Bio:</label>
+        <textarea name="bio" id="bio" cols="20" rows="3" required></textarea>
+    </div>
+    <div>
+        <label for="univ">University:</label>
+        <input type="text" id="univ" name="univ" maxlength="50" required>
+    </div>
+    
+    <div>
+        <label for="date">Date of Birth:</label>
+        <input type="datetime-local" id="date" name="date" required>
+    </div>
+
+	<div>
+		<label for="prof">Profile:</label>
+		<input type="checkbox" id="student" name="student" value="student">
+		<label for="student"> Student</label>
+		<input type="checkbox" id="professional" name="professional" value="professional">
+		<label for="professional"> Professional</label>
+	</div>
+    
+    <div>
+        <label for="user_email">Your Email:</label>
+        <input type="email" id="user_email" name="user_email" required>
+    </div>
+    <div>
+        <label for="user_password">Password:</label>
+        <input type="password" id="user_password" name="user_password" maxlength="50" required>
+    </div>
+    <button type="submit">Submit</button>
+</form>
+
 {% endblock %}
